# autodock

./: .gitignore  README.md  demo_auto_heal.sh  pyproject.toml
.github/workflows/: ci.yml
src/: docker_utils.py  log_parser.py  remediation.py  server.py
tests/: conftest.py  test_log_parser.py  test_remediation.py
